# wasi-whisper.cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dr_wav.c  dr_wav.h  ggml.c  inc.mk  whisper.cpp
.github/workflows/: build.yaml
examples/: CMakeLists.txt  common.cpp
examples/main/: CMakeLists.txt  main.cpp
script/: prepared.sh
